# stackformers

./: .claudeignore  .gitignore  CHANGELOG.md  CLAUDE.md  Justfile  LICENSE  PLAN.md  README.md  pyproject.toml
stackformers/: __init__.py  config.py  cross_attender.py  decoder.py  encoder.py  layers.py  sequence.py
stackformers/attention/: README.md  __init__.py  bias.py  bias_config.py  bias_factory.py  config.py  cross_attn.py  distance_bias.py  factory.py  ops.py  packed_cross_attn.py  packed_self_attn.py  protocols.py  self_attn.py  varlen_backend.py
stackformers/attention/kernels/: README.md  __init__.py  config.py  factory.py  sdpa.py  varlen.py  varlen_windowed.py  windowed.py
stackformers/feedforward/: README.md  __init__.py  config.py  factory.py  geglu.py  protocols.py  relu_squared.py  swiglu.py
stackformers/mlm/: README.md  config.py  head.py  head_cosine.py  masking.py  protocols.py  wrapper.py
stackformers/norm/: README.md  __init__.py  config.py  factory.py  layer_norm.py  protocols.py  rms.py
stackformers/positional/: README.md  __init__.py  config.py  factory.py  learned.py  none.py  protocols.py  rope1d.py  rope2d.py  rope_nd.py
stackformers/presets/: README.md  __init__.py  configs.py  cross_attender.py  decoder.py  encoder.py  encoder_cross.py  pyramid_vision.py
stackformers/spatial/: README.md  __init__.py  config.py  factory.py  input.py  kv_reduction.py  layer.py  patch_merging.py  protocols.py  spatial_reduction.py  window.py
stackformers/v1/: __init__.py  config.py  configs.py  decoder.py  encoder.py  factories.py  layers.py  protocols.py  sequence.py
stackformers/v1/attention/: __init__.py  bias.py  config.py  cross_attn.py  kernels.py  kernels_flash.py  protocols.py  self_attn.py
stackformers/v1/attention/kernels/: __init__.py  _mask.py  varlen.py  varlen_windowed.py  windowed.py
stackformers/v1/feedforward/: __init__.py  config.py  protocols.py  swiglu.py
stackformers/v1/norm/: __init__.py  protocols.py
stackformers/v1/positional/: __init__.py  config.py  none.py  protocols.py  rope1d.py  rope2d.py
tests/: conftest.py  test_cross_attender.py  test_decoder.py  test_encoder.py  test_layers.py  test_norm.py  test_sequence.py
tests/attention/: test_cross_attn.py  test_distance_bias.py  test_kernels.py  test_ops.py  test_self_attn.py  test_varlen_backend.py
tests/feedforward/: test_geglu.py  test_relu_squared.py  test_swiglu.py
tests/mlm/: test_head.py  test_head_cosine.py  test_masking.py  test_wrapper.py
tests/positional/: test_learned_pos.py  test_rope.py  test_rope_nd.py
tests/presets/: test_cross_attender.py  test_decoder.py  test_encoder.py  test_pyramid_vision.py
tests/spatial/: test_input.py  test_kv_reduction.py  test_layer.py  test_patch_merging.py  test_spatial_reduction.py  test_window.py
tests/v1/: test_encoder.py  test_layers.py  test_norm.py  test_sequence.py
tests/v1/attention/: test_cross_attn.py  test_kernels.py  test_self_attn.py
tests/v1/export/: test_rope.py  test_windowed_kernel.py
tests/v1/feedforward/: test_swiglu.py
tests/v1/positional/: test_rope.py
