[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stackformers"
version = "2.0.2"
description = "Typed, composable, SOLID transformer library for PyTorch"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2",
    "einops>=0.7",
    "jaxtyping>=0.2",
    "beartype>=0.18",
    "pydantic>=2.0",
    "numpy>=2.4.4",
]

[dependency-groups]
dev = [
    "pyrefly>=1.0.0",
    "ruff>=0.15.12",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

# ── Ruff ─────────────────────────────────────────────────────────────────────

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
# jaxtyping shape strings are not valid Python syntax — these are intentional
ignore = ["F722", "F821", "UP037"]

# ── Pyrefly ───────────────────────────────────────────────────────────────────

[tool.pyrefly]
python-version = "3.12.0"
# Point at the uv venv so pyrefly finds torch and other installed packages
python-interpreter-path = ".venv/bin/python"
# Include both source and tests so both are type-checked
project-includes = ["stackformers", "tests"]
# Do not infer types from first-use (stricter)
infer-with-first-use = false

# ── Pytest ────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
